--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Rock Paper Scissors Game</title>
   </head>
   <body>
+    <button class="btn" id="rock">Rock</button>
+    <button class="btn" id="paper">Paper</button>
+    <button class="btn" id="scissors">Scissors</button>
     <script src="script.js"></script>
   </body>
 </html>
