added score logging on screen

--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
     <button class="btn" id="paper">Paper</button>
     <button class="btn" id="scissors">Scissors</button>
 
-    <div class="results"></div>
+    <div class="results">
+      <div class="playerContainer">
+        <h1>Player score</h1>
+        <h2 id="playerScore">0</h2>
+      </div>
+      <div class="computerContainer">
+        <h1>Computer score</h1>
+        <h2 id="computerScore">0</h2>
+      </div>
+    </div>
   </body>
 </html>
