--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <button class="btn" id="paper">Paper</button>
     <button class="btn" id="scissors">Scissors</button>
 
-    <div class="results">
+    <div class="scoreContainer">
       <div class="playerContainer">
         <h1>Player score</h1>
         <h2 id="playerScore">0</h2>
@@ -23,5 +23,7 @@
         <h2 id="computerScore">0</h2>
       </div>
     </div>
+
+    <div class="results"></div>
   </body>
 </html>
