--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <title>Rock Paper Scissors Game</title>
   </head>
   <body>
-    <button class="btn" id="rock">Rock</button>
-    <button class="btn" id="paper">Paper</button>
-    <button class="btn" id="scissors">Scissors</button>
-
+    <div class="btns">
+      <button class="btn" id="rock">Rock</button>
+      <button class="btn" id="paper">Paper</button>
+      <button class="btn" id="scissors">Scissors</button>
+    </div>
     <div class="scoreContainer">
       <div class="playerContainer">
         <h1>Player score</h1>
